# demetria

./: .gitignore  README.md  pyproject.toml
demetria/: __init__.py
demetria/core/: field.py  scalarfield.py  vectorfield.py
demetria/zernike/: __init__.py  scalar.py  vector.py
examples/: vector_zernike.py  vector_zernike_video.py  zernike.py
tests/: conftest.py  test_scalar.py  test_vector.py  test_zernike.py
