[tool.poetry]
name = "demetria"
version = "0.1.0"
description = "A minimalistic package for manipulating 2D scalar and vector fields."
authors = ["Martin Odokienko <martin.balaz@trojsten.sk>"]
readme = "README.md"
packages = [
    { include = "demetria" },
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "*"
scipy = "*"
matplotlib = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
